--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "private": false,
   "dependencies": {
+    "@angular-devkit/core": "^11.0.1",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
